Windwo control button spacing fixes

--- a/EXTRA MODS/Min-max-close control buttons/Left side default system buttons/min-max-close_buttons.css
+++ b/EXTRA MODS/Min-max-close control buttons/Left side default system buttons/min-max-close_buttons.css
@@ -21,6 +21,10 @@
 	  display: none !important;
 	}
 }
+
+:root {
+	  --firefoxcss-control-buttons-margin: 85px !important;
+}
  
  /* ----------------------------------------------------------------- */
  /* ---------- Default OS style close/min/max window buttons -------- */
