--- a/EXTRA MODS/Min-max-close control buttons/Right side MacOS style buttons/MenuButtonsOnLeft/min-max-close_buttons.css
+++ b/EXTRA MODS/Min-max-close control buttons/Right side MacOS style buttons/MenuButtonsOnLeft/min-max-close_buttons.css
@@ -16,6 +16,10 @@
 	}
 }
 
+:root {
+	--firefoxcss-control-buttons-margin: 90px !important;
+}
+
 #navigator-toolbox .titlebar-buttonbox-container .titlebar-button{
   content: "" !important;
 }
