--- a/EXTRA MODS/Min-max-close control buttons/Right side MacOS style buttons/Without animation/min-max-close_buttons.css
+++ b/EXTRA MODS/Min-max-close control buttons/Right side MacOS style buttons/Without animation/min-max-close_buttons.css
@@ -26,6 +26,10 @@
 	}
 }
 
+:root {
+	--firefoxcss-control-buttons-margin: 90px !important;
+}
+
 /* ----------------------------------------------------------------- */
 /* ---------- MacOS style close/min/max window buttons ------------- */
 /* ----------------------------------------------------------------- */
